Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- New more user friendly welcome box.
Bug fixes:
~~~~~~~~~~
- Better position for the link "Create box".
- Removing an unneeded "text-align: left;" style for <p> which was causing
  display alignment problems with Epoz on lousy Microsoft product MSIE
  (of course).
- Fix: no menu box when there is only sections (or only workspaces)
  that are viewable
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Display the link "Create box" for every slot.