@@ -23,21 +23,23 @@
 
 <metal:main fill-slot="main">
 
-<tal:block repeat="slot here/getBoxSlots">
+<tal:block repeat="slot_name here/getBoxSlots">
 <tal:block define="sboxes python:btool.getBoxes(here,
                           include_only_in_subfolder=1);
-                   sboxes python:btool.filterBoxes(sboxes, slot=slot,
+                   sboxes python:btool.filterBoxes(sboxes, slot=slot_name,
                           keep_closed=1);"
            condition="python:len(sboxes)">
 <div class="documentActions">
     <a href="box_create_form" i18n:translate="button_create_box"
-      tal:attributes="href string:${context_urlc}/box_create_form">Add a box</a>
+      tal:attributes="href string:${context_urlc}/box_create_form?slot_name=${slot_name}">
+    Add a box</a>
 </div>
 <h3>
-<img tal:replace="structure python:here.getImgTag('slot_' + slot + '.png',
+<img tal:replace="structure python:here.getImgTag('slot_' + slot_name + '.png',
                                                   base_url=base_url)" />
-  <span i18n:translate="label_slot" />: <span i18n:translate="" tal:content="string:label_${slot}">Slot</span></h3>
-
+  <span i18n:translate="label_slot" />:
+  <span i18n:translate="" tal:content="string:label_${slot_name}">Slot</span>
+</h3>
 <table width="100%" summary="listing of boxes">
   <tr>
     <th i18n:translate="listingheader_order" width="5%">Order</th>
