@@ -3,6 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
+- Usability improvement: Display the link "Create box" for every slot and the
+  created box is created into the corresponding slot.
 - New more user friendly welcome box.
 Bug fixes:
 ~~~~~~~~~~
@@ -14,4 +16,4 @@ Bug fixes:
   that are viewable
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
-- Display the link "Create box" for every slot.
+-
